--- a/index.html
+++ b/index.html
@@ -7,8 +7,45 @@
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/mobile-responsive.css" />
     <link rel="stylesheet" href="styles/tab-responsive.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
   </head>
   <body>
-    <h1>hello world</h1>
+    <header>
+      <nav class="container">
+        <div class="nav-title">
+          <h3>Influencer products</h3>
+        </div>
+        <div class="nav-icons">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Product</a></li>
+            <li><a href="">Sign Up</a></li>
+            <li><a href="">Login</a></li>
+            <li>
+              <a href=""> <i class="fa-solid fa-magnifying-glass"></i> </a>
+            </li>
+            <li>
+              <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+
+    <script
+      src="https://kit.fontawesome.com/594df36906.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
