--- a/index.html
+++ b/index.html
@@ -25,18 +25,12 @@
           <h3>Influencer products</h3>
         </div>
         <div class="nav-icons">
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Product</a></li>
-            <li><a href="">Sign Up</a></li>
-            <li><a href="">Login</a></li>
-            <li>
-              <a href=""> <i class="fa-solid fa-magnifying-glass"></i> </a>
-            </li>
-            <li>
-              <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
-            </li>
-          </ul>
+          <a href="">Home</a>
+          <a href="">Product</a>
+          <a href="">Sign In</a>
+          <a href="">Login</a>
+          <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+          <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
       </nav>
     </header>
