--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
           <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
       </nav>
+      <section class="container influencer-heading">
+        <div class="influencer-description">
+          <h2>Start your Journey as Influencer</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+            vestibulum sed scelerisque eros. Lectus faucibus.
+          </p>
+          <button class="btn-primary">
+            Preebook now <i class="fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="influencer-img">
+          <img src="images/main-camera.png" alt="main camera" />
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
