--- a/index.html
+++ b/index.html
@@ -49,7 +49,20 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <div class="container companies">
+        <img src="logos/Alibaba.svg" alt="" /><img
+          src="logos/Amazon.svg"
+          alt=""
+        /><img src="logos/Daraz.pk Logo.svg" alt="" /><img
+          src="logos/Ebay.svg"
+          alt=""
+        /><img src="logos/Rakuten.svg" alt="" /><img
+          src="logos/Target.svg"
+          alt=""
+        /><img src="logos/Walmart.svg" alt="" />
+      </div>
+    </main>
     <footer></footer>
 
     <script
