main section almost done

--- a/index.html
+++ b/index.html
@@ -62,6 +62,177 @@
           alt=""
         /><img src="logos/Walmart.svg" alt="" />
       </div>
+      <section class="container cards-container">
+        <h2>Popular Collection</h2>
+        <div class="card-row">
+          <div class="card">
+            <img class="main-img" src="images/tripod.png" alt="tripod" />
+            <h3>Flex Tripod</h3>
+            <h5>$50.48</h5>
+            <p>
+              <img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="Vector.svg" alt="" />
+              4.99
+            </p>
+            <p class="main-text">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img class="main-img" src="images/tripod.png" alt="tripod" />
+            <h3>Flex Tripod</h3>
+            <h5>$50.48</h5>
+            <p>
+              <img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="Vector.svg" alt="" />
+              4.99
+            </p>
+            <p class="main-text">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img class="main-img" src="images/tripod.png" alt="tripod" />
+            <h3>Flex Tripod</h3>
+            <h5>$50.48</h5>
+            <p>
+              <img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="Vector.svg" alt="" />
+              4.99
+            </p>
+            <p class="main-text">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="card-row">
+          <div class="card">
+            <img class="main-img" src="images/tripod.png" alt="tripod" />
+            <h3>Flex Tripod</h3>
+            <h5>$50.48</h5>
+            <p>
+              <img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="Vector.svg" alt="" />
+              4.99
+            </p>
+            <p class="main-text">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img class="main-img" src="images/tripod.png" alt="tripod" />
+            <h3>Flex Tripod</h3>
+            <h5>$50.48</h5>
+            <p>
+              <img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="Vector.svg" alt="" />
+              4.99
+            </p>
+            <p class="main-text">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img class="main-img" src="images/tripod.png" alt="tripod" />
+            <h3>Flex Tripod</h3>
+            <h5>$50.48</h5>
+            <p>
+              <img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="Vector.svg" alt="" />
+              4.99
+            </p>
+            <p class="main-text">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="card-row">
+          <div class="card">
+            <img class="main-img" src="images/tripod.png" alt="tripod" />
+            <h3>Flex Tripod</h3>
+            <h5>$50.48</h5>
+            <p>
+              <img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="Vector.svg" alt="" />
+              4.99
+            </p>
+            <p class="main-text">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img class="main-img" src="images/tripod.png" alt="tripod" />
+            <h3>Flex Tripod</h3>
+            <h5>$50.48</h5>
+            <p>
+              <img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="Vector.svg" alt="" />
+              4.99
+            </p>
+            <p class="main-text">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img class="main-img" src="images/tripod.png" alt="tripod" />
+            <h3>Flex Tripod</h3>
+            <h5>$50.48</h5>
+            <p>
+              <img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="Vector.svg" alt="" />
+              4.99
+            </p>
+            <p class="main-text">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
 
