main section btn added

--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
             </p>
           </div>
         </div>
+        <button class="see-more">
+          See More <i class="fa-solid fa-arrow-right"></i>
+        </button>
       </section>
     </main>
     <footer></footer>
