fearture product section started

--- a/index.html
+++ b/index.html
@@ -236,6 +236,22 @@
           See More <i class="fa-solid fa-arrow-right"></i>
         </button>
       </section>
+      <section class="container feature-product">
+        <div class="feature-img">
+          <img src="images/gear.png" alt="gear up" />
+        </div>
+        <div class="feature-description">
+          <h2>Featured products at one place</h2>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+          <button class="btn-primary">
+            Join Now <i class="fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+      </section>
     </main>
     <footer></footer>
 
