footer section done. and ready for responsive

--- a/index.html
+++ b/index.html
@@ -253,7 +253,19 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="footer">
+        <h2>Influencer products</h2>
+        <p>Copyright © 2020 influencer products</p>
+        <p>All rights reserved</p>
+        <div class="icons">
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+          <i class="fa fa-internet-explorer" aria-hidden="true"></i>
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+          <i class="fa fa-youtube" aria-hidden="true"></i>
+        </div>
+      </section>
+    </footer>
 
     <script
       src="https://kit.fontawesome.com/594df36906.js"
