different object ditected

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
             </p>
           </div>
           <div class="card">
-            <img class="main-img" src="images/tripod.png" alt="tripod" />
-            <h3>Flex Tripod</h3>
-            <h5>$50.48</h5>
+            <img class="main-img" src="images/mic.png" alt="tripod" />
+            <h3>microphone</h3>
+            <h5>$120.25</h5>
             <p>
               <img src="logos/Vector.svg" alt="" /><img
                 src="logos/Vector.svg"
@@ -102,65 +102,9 @@
             </p>
           </div>
           <div class="card">
-            <img class="main-img" src="images/tripod.png" alt="tripod" />
-            <h3>Flex Tripod</h3>
-            <h5>$50.48</h5>
-            <p>
-              <img src="logos/Vector.svg" alt="" /><img
-                src="logos/Vector.svg"
-                alt=""
-              /><img src="logos/Vector.svg" alt="" /><img
-                src="logos/Vector.svg"
-                alt=""
-              /><img src="Vector.svg" alt="" />
-              4.99
-            </p>
-            <p class="main-text">
-              Wordwide shifting available Buyers protection possible!
-            </p>
-          </div>
-        </div>
-        <div class="card-row">
-          <div class="card">
-            <img class="main-img" src="images/tripod.png" alt="tripod" />
-            <h3>Flex Tripod</h3>
-            <h5>$50.48</h5>
-            <p>
-              <img src="logos/Vector.svg" alt="" /><img
-                src="logos/Vector.svg"
-                alt=""
-              /><img src="logos/Vector.svg" alt="" /><img
-                src="logos/Vector.svg"
-                alt=""
-              /><img src="Vector.svg" alt="" />
-              4.99
-            </p>
-            <p class="main-text">
-              Wordwide shifting available Buyers protection possible!
-            </p>
-          </div>
-          <div class="card">
-            <img class="main-img" src="images/tripod.png" alt="tripod" />
-            <h3>Flex Tripod</h3>
-            <h5>$50.48</h5>
-            <p>
-              <img src="logos/Vector.svg" alt="" /><img
-                src="logos/Vector.svg"
-                alt=""
-              /><img src="logos/Vector.svg" alt="" /><img
-                src="logos/Vector.svg"
-                alt=""
-              /><img src="Vector.svg" alt="" />
-              4.99
-            </p>
-            <p class="main-text">
-              Wordwide shifting available Buyers protection possible!
-            </p>
-          </div>
-          <div class="card">
-            <img class="main-img" src="images/tripod.png" alt="tripod" />
-            <h3>Flex Tripod</h3>
-            <h5>$50.48</h5>
+            <img class="main-img" src="images/airpod.png" alt="tripod" />
+            <h3>Airbuds</h3>
+            <h5>$100.00</h5>
             <p>
               <img src="logos/Vector.svg" alt="" /><img
                 src="logos/Vector.svg"
@@ -178,9 +122,9 @@
         </div>
         <div class="card-row">
           <div class="card">
-            <img class="main-img" src="images/tripod.png" alt="tripod" />
-            <h3>Flex Tripod</h3>
-            <h5>$50.48</h5>
+            <img class="main-img" src="images/drone.png" alt="tripod" />
+            <h3>Drone</h3>
+            <h5>$980.25</h5>
             <p>
               <img src="logos/Vector.svg" alt="" /><img
                 src="logos/Vector.svg"
@@ -196,9 +140,9 @@
             </p>
           </div>
           <div class="card">
-            <img class="main-img" src="images/tripod.png" alt="tripod" />
-            <h3>Flex Tripod</h3>
-            <h5>$50.48</h5>
+            <img class="main-img" src="images/lights.png" alt="tripod" />
+            <h3>Light Setup</h3>
+            <h5>$1200.00</h5>
             <p>
               <img src="logos/Vector.svg" alt="" /><img
                 src="logos/Vector.svg"
@@ -214,9 +158,65 @@
             </p>
           </div>
           <div class="card">
-            <img class="main-img" src="images/tripod.png" alt="tripod" />
-            <h3>Flex Tripod</h3>
-            <h5>$50.48</h5>
+            <img class="main-img" src="images/setup.png" alt="tripod" />
+            <h3>Photoshoot set</h3>
+            <h5>$820.40</h5>
+            <p>
+              <img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="Vector.svg" alt="" />
+              4.99
+            </p>
+            <p class="main-text">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+        </div>
+        <div class="card-row">
+          <div class="card">
+            <img class="main-img" src="images/camera.png" alt="tripod" />
+            <h3>Vlogging Camera</h3>
+            <h5>$1800.80</h5>
+            <p>
+              <img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="Vector.svg" alt="" />
+              4.99
+            </p>
+            <p class="main-text">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img class="main-img" src="images/single-light.png" alt="tripod" />
+            <h3>Green Screen</h3>
+            <h5>$25.48</h5>
+            <p>
+              <img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="logos/Vector.svg" alt="" /><img
+                src="logos/Vector.svg"
+                alt=""
+              /><img src="Vector.svg" alt="" />
+              4.99
+            </p>
+            <p class="main-text">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img class="main-img" src="images/action.png" alt="tripod" />
+            <h3>Action Camera</h3>
+            <h5>$380.00</h5>
             <p>
               <img src="logos/Vector.svg" alt="" /><img
                 src="logos/Vector.svg"
